--- a/projeto/projeto/Web.config
+++ b/projeto/projeto/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=regulus;User ID=PR317187;Password=PR317187"
       providerName="System.Data.SqlClient" />
+    <add name="csBanco" connectionString="Data Source=regulus.cotuca.unicamp.br;User ID=PR317187;Password=PR317187"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
